# bevy-test-app

./: Cargo.toml
src/: main.rs  spawns.rs  world_info.rs
src/components/: character.rs  look_at.rs  mod.rs  on_mouse.rs  position.rs  tag.rs  velocity.rs
src/systems/: look_at.rs  mod.rs  mover.rs  on_mouse.rs  player_controller.rs
