[package]
name = "bevy-test-project"
version = "0.1.0"
authors = ["Jay Harris <jay.harris@outlook.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_rapier2d = { version = "0.9.0", features = [ "simd-stable", "parallel" ] }